Fix Java 17 compatibility, add Maven wrapper, remove branding references
- Downgrade java.version from 21 to 17
- Replace List.getFirst() with get(0) in test
- Install Maven wrapper (mvnw)
- Remove "Spring Initializr" and "tuvium" references from code and docs